--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
 #productShowcase {
   display: grid;
   gap: 16px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  transition: all 0.3s ease-in-out;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+#productShowcase.grid-changeList {
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
 
 #productCount {
@@ -12,24 +15,24 @@
 
 .product-card {
   border: 1px solid #ddd;
-  padding: 5px;
+  padding: 10px;
   text-align: center;
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product-thumb-img {
   width: 100%;
-  max-width: 200px;
   cursor: pointer;
 }
 
-.product-variations-img {
-  width: 5rem;
-  height: 5rem;
-  cursor: pointer;
+.product-thumb-img:hover {
+  transform: scale(1.05);
 }
 
 .product-price {
@@ -37,11 +40,34 @@
   color: green;
 }
 
-.product-price.discount {
+.product-price-discount {
   color: red;
   text-decoration: line-through;
+  margin-right: 8px;
 }
 
 .product-button {
   border: none;
+  background-color: #007bff;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: large;
+  pointer-events: none;
+}
+
+.change-layout-button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 15px;
+  font-size: 16px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.change-layout-button:hover {
+  background-color: #218838;
 }
